--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>3d testing</title>
-		<script src="three.js"></script>
+		<script src="js/three.js"></script>
 		<script src="js/_main.js"></script>
 	</head>
 	<body>
