--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 		<meta charset="utf-8">
 		<title>3d testing</title>
 		<script src="js/three.js"></script>
+
+
 		<script src="js/_main.js"></script>
 	</head>
 	<body>
-
+		<canvas></canvas>
 	</body>
 </html>
