--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 
 <body>
 	<script src="js/three.js"></script>
-
+	<script src="js/_main.js"></script>
 
 <span></span>
-
-	<script src="js/_main.js"></script>
+<script src="js/lock.js"></script>
 
 </body>
 
